fix: change z index to prevent text overlap

--- a/src/styles/components/_affix.scss
+++ b/src/styles/components/_affix.scss
@@ -2,4 +2,5 @@
   position: fixed;
   left: 0;
   width: 100%;
+  z-index: 100;
 }
